--- a/épreuve_immunité1/page.html
+++ b/épreuve_immunité1/page.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="button">
-		<h1></h1><button>clique</button></h1>
+		<button><h1>clique</h1></button>
 	</div>
 
 <!-- div qui renvoi le résultat du bouton -->
